--- a/main/static/main/home/home.css
+++ b/main/static/main/home/home.css
@@ -1,12 +1,20 @@
 @charset "UTF-8";
 /*-------------Миксины----------------*/
 .scenaries {
+  width: 100%;
   margin-top: 150px;
   display: grid;
   grid-template-columns: repeat(12, 1fr);
   grid-template-rows: 140px 187px 222px 133px;
   grid-template-areas: "a a b b b b c c c c c c" "a a d d d d e e e e f f" "g g g h h h i i i i f f" "j j j j j j k k k k k k";
   gap: 40px;
+  overflow: hidden;
+}
+@media screen and (max-width: 991px) {
+  .scenaries {
+    grid-template-areas: "f f f a a a e e e e e e" "f f f a a a i i i i i i" "g g g g g g d d d d d d" "c c c c c c b b b b b b" "k k k k k k k k h h h h" "j j j j j j j j l l l l";
+    grid-template-rows: 185px 202px 202px 140px 133px 133px;
+  }
 }
 .scenaries > *:nth-child(1) {
   grid-area: a;
@@ -118,7 +126,7 @@
   padding: 16px;
   padding-bottom: 10px;
   color: var(--green);
-  z-index: 10;
+  z-index: -1;
 }
 @media screen and (min-width: 992px) {
   .scenaries .scenaries_item .description:hover {
@@ -139,6 +147,13 @@
   -webkit-box-orient: vertical;
   overflow: hidden;
 }
+@media screen and (max-width: 991px) {
+  .scenaries .scenaries_item.active .description {
+    transition-delay: 0.1s;
+    opacity: 1;
+    z-index: 10;
+  }
+}
 .scenaries .scenaries_item.a .label {
   top: 88px;
   left: 0;
@@ -149,12 +164,23 @@
   background-position: left bottom;
   background-repeat: no-repeat;
 }
+@media screen and (max-width: 991px) {
+  .scenaries .scenaries_item.a .description {
+    height: 367px;
+  }
+}
 .scenaries .scenaries_item.a .description p {
   -webkit-line-clamp: 16;
   line-clamp: 16;
 }
 @media screen and (min-width: 992px) {
   .scenaries .scenaries_item.a:hover .label {
+    transform: translateX(10%);
+    top: 70px;
+  }
+}
+@media screen and (max-width: 991px) {
+  .scenaries .scenaries_item.a.active .label {
     transform: translateX(10%);
     top: 70px;
   }
@@ -189,16 +215,34 @@
     left: 30px;
   }
 }
+@media screen and (max-width: 991px) {
+  .scenaries .scenaries_item.b.active .label {
+    left: 30px;
+  }
+  .scenaries .scenaries_item.b.active .description .title_block {
+    left: 0;
+  }
+}
 .scenaries .scenaries_item.c .label {
   top: 50%;
   left: 30%;
   transition: 0.3s cubic-bezier(0.56, -0.64, 0.42, 1.5);
   transform: translateY(-50%);
 }
+@media screen and (max-width: 991px) {
+  .scenaries .scenaries_item.c .label {
+    left: 54%;
+  }
+}
 .scenaries .scenaries_item.c .description {
   background-image: url("./../images/air_back.svg");
   background-position: right bottom;
   background-repeat: no-repeat;
+}
+@media screen and (max-width: 991px) {
+  .scenaries .scenaries_item.c .description {
+    width: 70dvw;
+  }
 }
 .scenaries .scenaries_item.c .description .title_block {
   position: relative;
@@ -222,6 +266,17 @@
   .scenaries .scenaries_item.c:hover .label {
     top: 30%;
     left: 10%;
+  }
+}
+@media screen and (max-width: 991px) {
+  .scenaries .scenaries_item.c.active .label {
+    top: 30%;
+    left: 10%;
+  }
+  .scenaries .scenaries_item.c.active .description .title_block {
+    transition-delay: 0.1s;
+    top: 0;
+    left: 0;
   }
 }
 .scenaries .scenaries_item.d .label {
@@ -268,6 +323,14 @@
     top: 20%;
   }
 }
+@media screen and (max-width: 991px) {
+  .scenaries .scenaries_item.f.active .label {
+    top: 20%;
+  }
+  .scenaries .scenaries_item.f.active .description .title_block {
+    top: 0;
+  }
+}
 .scenaries .scenaries_item.h .label {
   top: 0px;
   left: 40%;
@@ -277,6 +340,11 @@
   background-image: url("./../images/water_back.svg");
   background-position: right bottom;
   background-repeat: no-repeat;
+}
+@media screen and (max-width: 991px) {
+  .scenaries .scenaries_item.h .description {
+    height: 202px;
+  }
 }
 .scenaries .scenaries_item.h .description .title_block {
   position: relative;
@@ -299,6 +367,16 @@
 @media screen and (min-width: 992px) {
   .scenaries .scenaries_item.h:hover .label {
     left: 30px;
+  }
+}
+@media screen and (max-width: 991px) {
+  .scenaries .scenaries_item.h.active .label {
+    left: 30px;
+  }
+  .scenaries .scenaries_item.h.active .description .title_block {
+    transition-delay: 0.1s;
+    top: 2px;
+    left: 0;
   }
 }
 .scenaries .scenaries_item.i .label {
@@ -336,6 +414,17 @@
     left: 10%;
   }
 }
+@media screen and (max-width: 991px) {
+  .scenaries .scenaries_item.i.active .label {
+    top: 30%;
+    left: 10%;
+  }
+  .scenaries .scenaries_item.i.active .description .title_block {
+    transition-delay: 0.1s;
+    top: 0;
+    left: 0;
+  }
+}
 .scenaries .scenaries_item.j .label {
   top: 0px;
   left: 20%;
@@ -345,6 +434,11 @@
   background-image: url("./../images/water_back.svg");
   background-position: right bottom;
   background-repeat: no-repeat;
+}
+@media screen and (max-width: 991px) {
+  .scenaries .scenaries_item.j .description {
+    width: 70dvw;
+  }
 }
 .scenaries .scenaries_item.j .description .title_block {
   position: relative;
@@ -366,15 +460,33 @@
     left: 30px;
   }
 }
+@media screen and (max-width: 991px) {
+  .scenaries .scenaries_item.j.active .label {
+    left: 30px;
+  }
+  .scenaries .scenaries_item.j.active .description .title_block {
+    left: 0;
+  }
+}
 .scenaries .scenaries_item.k .label {
   top: 0px;
   left: 40%;
   transition: 0.3s cubic-bezier(0.56, -0.64, 0.42, 1.5);
 }
+@media screen and (max-width: 991px) {
+  .scenaries .scenaries_item.k .label {
+    left: 48%;
+  }
+}
 .scenaries .scenaries_item.k .description {
   background-image: url("./../images/fire_back2.svg");
   background-position: right bottom;
   background-repeat: no-repeat;
+}
+@media screen and (max-width: 991px) {
+  .scenaries .scenaries_item.k .description {
+    width: 70dvw;
+  }
 }
 .scenaries .scenaries_item.k .description .title_block {
   position: relative;
@@ -394,5 +506,13 @@
 @media screen and (min-width: 992px) {
   .scenaries .scenaries_item.k:hover .label {
     left: 30px;
+  }
+}
+@media screen and (max-width: 991px) {
+  .scenaries .scenaries_item.k.active .label {
+    left: 30px;
+  }
+  .scenaries .scenaries_item.k.active .description .title_block {
+    left: 0;
   }
 }/*# sourceMappingURL=home.css.map */
