--- a/main/static/main/home/home.scss
+++ b/main/static/main/home/home.scss
@@ -77,6 +77,10 @@
         border-radius: 16px;
         font-size: 16px;
 
+        @include common.mediaMaxWidth(768) {
+            height: 55px;
+        }
+
         &.e {
             display: flex;
             align-items: center;
@@ -135,6 +139,12 @@
 
             svg {
                 min-width: 20px;
+            }
+
+            @include common.mediaMaxWidth(768) {
+                left: 0;
+                top: 50%;
+                transform: translateY(-50%);
             }
         }
 
@@ -620,6 +630,62 @@
                         }
                     }
                 }
+            }
+        }
+        
+    }
+    @include common.mediaMaxWidth(768) {
+        padding: 0px !important;
+        grid-template-columns: 1fr;
+        grid-template-areas: 
+            'e'
+            'a'
+            'b'
+            'c'
+            'f'
+            'd'
+            'h'
+            'i'
+            'g'
+        ;
+        grid-auto-rows: auto;
+        grid-template-rows: repeat(11, auto);
+        gap: 0px;
+        overflow: hidden;
+        
+        .scenaries_item {
+            border-top: 1px solid var(--brown);
+            width: 100% !important;
+            background-color: var(--white);
+            transition: 0.8s;
+            height: 55px;
+            border-radius: 0px;
+            .label {
+                left: 0 !important;
+                top: 0 !important;
+                transform: translateY(0%) !important;
+                border-radius: 0;
+                height: 55px !important;
+                animation: none !important;
+            }
+
+            .description {
+                width: 100% !important;
+                height: 100% !important;
+                transition: 0.8s !important;
+                transition-delay: 0s !important;
+                background-position: right bottom !important;
+                .title_block {
+                    left: 0 !important;
+                    transition: 0s linear !important;
+                    h4 {
+                        width: max-content !important;
+                    }
+                }
+            }
+
+            &.active {
+                height: 202px;
             }
         }
     }
