--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -103,7 +103,7 @@
                     </clipPath>
                     </defs>
                 </svg>
-                <h4>прокрастинация</h4>
+                <h4>Прокрастинация</h4>
             </div>
         </div>
         <div class="scenaries_item d" onclick="openDescription(event)">
