--- a/main/static/main/home/home.scss
+++ b/main/static/main/home/home.scss
@@ -162,7 +162,7 @@
             padding: 16px;
             padding-bottom: 10px;
             color: var(--green);
-            z-index: -1;
+            z-index: 10;
 
             @include common.mediaMinWidth(992) {
                 &:hover {
@@ -188,6 +188,9 @@
         }
 
         @include common.mediaMaxWidth(991) {
+            .description {
+                z-index: -1;
+            }
             &.active {
                 .description {
                     transition-delay: 0.1s;
@@ -646,10 +649,12 @@
             'd'
             'h'
             'i'
+            'j'
+            'k'
             'g'
         ;
         grid-auto-rows: auto;
-        grid-template-rows: repeat(11, auto);
+        grid-template-rows: repeat(9, auto);
         gap: 0px;
         overflow: hidden;
         
@@ -660,13 +665,48 @@
             transition: 0.8s;
             height: 55px;
             border-radius: 0px;
+            overflow: hidden;
+            &.a {
+                border-radius: 16px;
+                margin-top: -14px;
+                z-index: 10;
+                .description {
+                    background-image: url('./../images/fire_back3.svg');
+                    background-position: bottom right 5px;
+                }
+            }
+            &.e {
+                border-top-right-radius: 16px;
+                border-top-left-radius: 16px;
+                border: 0;
+                height: 185px;
+            }
+            &.g {
+                height: auto;
+                border: 0;
+                background-color: transparent;
+                padding: 16px;
+            }
+            &.b {
+                .description {
+                    background-position: bottom -10px right !important;
+                }
+            }
+            &.c {
+                .description {
+                    background-position: bottom -30px right !important;
+                }
+            }
             .label {
                 left: 0 !important;
-                top: 0 !important;
+                top: 1px !important;
                 transform: translateY(0%) !important;
                 border-radius: 0;
-                height: 55px !important;
+                height: 53px !important;
                 animation: none !important;
+                h4 {
+                    width: max-content;
+                }
             }
 
             .description {
@@ -675,9 +715,15 @@
                 transition: 0.8s !important;
                 transition-delay: 0s !important;
                 background-position: right bottom !important;
+                p {
+                    -webkit-line-clamp: 6 !important;
+                    line-clamp: 6 !important;
+                }
                 .title_block {
+                    top: 0 !important;
                     left: 0 !important;
                     transition: 0s linear !important;
+                    animation: none !important;
                     h4 {
                         width: max-content !important;
                     }
