--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -300,4 +300,75 @@
         </div>
     </div>
 
+    <div class="acquaintance container">
+
+        <div class="acquaintance_head">
+            <div class="acquaintance_title">
+                <h2>Знакомство с собой настоящим открывает дверь в новое будущее</h2>
+            </div>
+            
+            <div class="rigth">
+                <div class="link_block">
+                    <a class="acquaintance_link" href="">подробнее о нас</a>
+                </div>
+                <img src="{% static 'main/images/Rotate.svg' %}" alt="">
+            </div>
+
+        </div>
+
+        <div class="acquaintance_grid">
+            <div class="image_block">
+                <img src="{% static 'main/images/acquaintances.svg' %}" alt="">
+                <a class="acquaintance_link from_image" href="">подробнее о нас</a>
+            </div>
+
+            <div class="factors">
+                <h3>Нашу жизнь формируют множество <span>факторов</span></h3>
+                <div class="factors_grid">
+                    <div class="factor_item border">
+                        <img src="{% static 'main/images/Rotate.svg' %}" alt="">
+                        <p>наше взаимодействие с нашими родителями в раннем детстве</p>
+                    </div>
+                    <div class="factor_item">
+                        <img src="{% static 'main/images/Rotate.svg' %}" alt="">
+                        <p>привычная сформированная реакция на те или иные события</p>
+                    </div>
+                    <div class="factor_item border">
+                        <img src="{% static 'main/images/Rotate.svg' %}" alt="">
+                        <p>убеждения</p>
+                    </div>
+                    <div class="factor_item">
+                        <img src="{% static 'main/images/Rotate.svg' %}" alt="">
+                        <p>полученный опыт</p>
+                    </div>
+                    <div class="factor_item border">
+                        <img src="{% static 'main/images/Rotate.svg' %}" alt="">
+                        <p>социальные нормы</p>
+                    </div>
+                    <div class="factor_item border">
+                        <img src="{% static 'main/images/Rotate.svg' %}" alt="">
+                        <p>культура</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="description_block">
+                <p>
+                    Все сферы жизни буквально пронизаны этими <span>кластерами</span> и со временем они врезаются в наше сознание как наскальная живопись, заставляя нас встраивать свою судьбу в их трафарет. Плывя по заданному <span>не нами курсу</span> мы порой не замечаем как вновь и вновь оказываемся в ловушке повторяющихся прежних событий и ситуаций, не понимая, что выход из <span>замкнутого круга</span> находится на глубине нашего бессознательного
+                </p>
+            </div>
+
+            <div class="mob_top_description">Все сферы жизни буквально пронизаны этими <span>кластерами</span> и со временем они врезаются в наше сознание как наскальная живопись, заставляя нас встраивать свою судьбу в их трафарет.</div>
+
+            <div class="mob_description">
+                <p>Плывя по заданному <span>не нами курсу</span> мы порой не замечаем как вновь и вновь оказываемся в ловушке повторяющихся прежних событий и ситуаций, не понимая, что выход из <span>замкнутого круга</span> находится на глубине нашего бессознательного</p>
+                <a class="acquaintance_link" href="">подробнее о нас</a>
+            </div>
+
+        </div>
+
+        
+
+    </div>
+
 {% endblock %}
