--- a/main/static/main/home/home.scss
+++ b/main/static/main/home/home.scss
@@ -741,6 +741,24 @@
     margin-top: 150px;
     position: relative;
 
+    .decor {
+        width: 300px;
+        position: absolute;
+        top: -95px;
+        left: -129px;
+        z-index: 0;
+
+        img {
+            width: 100%;
+        }
+
+        @include common.mediaMaxWidth(768) {
+            width: 180px;
+            top: -53px;
+            left: -90px;
+        }
+    }
+
     .acquaintance_link {
         font-size: 16px;
         color: var(--green);
