--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -302,6 +302,10 @@
 
     <div class="acquaintance container">
 
+        <div class="decor">
+            <img src="{% static 'main/images/acquaintances_decor.svg' %}" alt="">
+        </div>
+
         <div class="acquaintance_head">
             <div class="acquaintance_title">
                 <h2>Знакомство с собой настоящим открывает дверь в новое будущее</h2>
